# EvaSec

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: Camera.cpp  Detector.cpp  FileManager.cpp  main.cpp
src/Header/: Camera.h  Detector.h  FileManagment.h
